Refactoring Addresses query template and POJO attributes